[package]
name = "PP1"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
chrono = { version = "^0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.33", features = ["chrono", "bundled"] }
tabled = "0.18.0"

[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
